--- a/Supply_Base_Prediction.ipynb
+++ b/Supply_Base_Prediction.ipynb
@@ -3,7 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "1nlKvkoXku3MSZPTz_ugd_1pTmSvZSWFH",
+      "authorship_tag": "ABX9TyN/U2nvoxZZ6DMbhK8mHO1F",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -360,6 +363,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Trisha-Sarwade/Supply-Base-Prediction/blob/main/Supply_Base_Prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 132,
